[package]
name = "libinput_project"
version = "0.1.0"
edition = "2021"
description = "RustKey Input Monitor - A colorful terminal application to visualize keyboard and mouse events in real-time"





[dependencies]
input = "0.9"       # For libinput bindings
evdev = "0.10"      # For evdev bindings

